--- a/.env
+++ b/.env
@@ -45,3 +45,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+MAILER_DSN=smtp://ebe387b35ae8c6:d711b81ef046fb@sandbox.smtp.mailtrap.io:2525
